# octetos-software

./: .gitignore  Makefile.am  Makefile.in  configure.ac
ing/: rqs.ods
src/: Makefile.am  Makefile.in  db  db.cc  db.hh  octetos-software.pc.in  software.cc  software.hh  testing-v0.cc  version.cc  version.hh
